lld-link is same as lld

--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2816,8 +2816,8 @@ DEFINE CLANGPDB_ALL_CC_FLAGS         = DEF(GCC48_ALL_CC_FLAGS) DEF(CLANGPDB_WARN
 ###########################
 *_CLANGPDB_IA32_CC_PATH              = DEF(CLANGPDB_IA32_PREFIX)clang
 *_CLANGPDB_IA32_SLINK_PATH           = DEF(CLANGPDB_IA32_PREFIX)llvm-lib
-*_CLANGPDB_IA32_DLINK_PATH           = DEF(CLANGPDB_IA32_PREFIX)lld-link
-*_CLANGPDB_IA32_ASLDLINK_PATH        = DEF(CLANGPDB_IA32_PREFIX)lld-link
+*_CLANGPDB_IA32_DLINK_PATH           = DEF(CLANGPDB_IA32_PREFIX)lld
+*_CLANGPDB_IA32_ASLDLINK_PATH        = DEF(CLANGPDB_IA32_PREFIX)lld
 *_CLANGPDB_IA32_ASM_PATH             = DEF(CLANGPDB_IA32_PREFIX)clang
 *_CLANGPDB_IA32_PP_PATH              = DEF(CLANGPDB_IA32_PREFIX)clang
 *_CLANGPDB_IA32_VFRPP_PATH           = DEF(CLANGPDB_IA32_PREFIX)clang
@@ -2850,8 +2850,8 @@ NOOPT_CLANGPDB_IA32_DLINK2_FLAGS     =
 ##########################
 *_CLANGPDB_X64_CC_PATH              = DEF(CLANGPDB_X64_PREFIX)clang
 *_CLANGPDB_X64_SLINK_PATH           = DEF(CLANGPDB_X64_PREFIX)llvm-lib
-*_CLANGPDB_X64_DLINK_PATH           = DEF(CLANGPDB_X64_PREFIX)lld-link
-*_CLANGPDB_X64_ASLDLINK_PATH        = DEF(CLANGPDB_X64_PREFIX)lld-link
+*_CLANGPDB_X64_DLINK_PATH           = DEF(CLANGPDB_X64_PREFIX)lld
+*_CLANGPDB_X64_ASLDLINK_PATH        = DEF(CLANGPDB_X64_PREFIX)lld
 *_CLANGPDB_X64_ASM_PATH             = DEF(CLANGPDB_X64_PREFIX)clang
 *_CLANGPDB_X64_PP_PATH              = DEF(CLANGPDB_X64_PREFIX)clang
 *_CLANGPDB_X64_VFRPP_PATH           = DEF(CLANGPDB_X64_PREFIX)clang
